--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,5 +1,5 @@
 ---
-title: "SECTION UNDER CONSTRUCTION"
+title: ""
 collection: talks
 type: "Talk"
 permalink: /talks/2012-03-01-talk-1
@@ -7,3 +7,4 @@ venue: ""
 location: ""
 ---
 
+SECTION UNDER CONSTRUCTION
